# otus--editor

./: Application.h  CMakeLists.txt  ConsoleController.h  ConsoleView.h  Doxyfile  IModel.h  IView.h  Model.h  PrimitiveContainer.h  Primitives.h  Snapshot.h  SnapshotSaver.h  _application_8h.html  _application_8h__dep__incl.map  _application_8h__dep__incl.md5  _application_8h__incl.map  _application_8h__incl.md5  _application_8h_source.html  _console_view_8cpp.html  _console_view_8cpp__incl.map  _console_view_8cpp__incl.md5  _console_view_8h.html  _console_view_8h__dep__incl.map  _console_view_8h__dep__incl.md5  _console_view_8h__incl.map  _console_view_8h__incl.md5  _console_view_8h_source.html  _i_model_8h.html  _i_model_8h__dep__incl.map  _i_model_8h__dep__incl.md5  _i_model_8h__incl.map  _i_model_8h__incl.md5  _i_model_8h_source.html  _i_view_8h.html  _i_view_8h__dep__incl.map  _i_view_8h__dep__incl.md5  _i_view_8h__incl.map  _i_view_8h__incl.md5  _i_view_8h_source.html  _model_8h.html  (+216 more)
.github/workflows/: release.yml
code/: Application.h  CMakeLists.txt  main.cpp
code/ConsoleUI/: ConsoleView.h  IView.h
code/EditorCore/: PrimitiveContainer.h  Primitives.h  Snapshot.h  SnapshotSaver.h
code/EditorLogic/: IModel.h  Model.h
code/source/: ConsoleView.cpp  PrimitiveContainer.cpp  SnapshotSaver.cpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+10 more)
